<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/prefs_cat_scrobbler_title">

		<CheckBoxPreference
			android:key="scrobble"
			android:defaultValue="true"
			android:summary="@string/prefs_scrobble_summary" android:title="@string/prefs_scrobble_title"/>

		<fm.last.android.activity.SeekBarPreference
			android:key="scrobble_percentage"
			android:max="100"
			android:defaultValue="50"
			android:summary="@string/prefs_scrobble_percentage"
			android:title="@string/prefs_scrobble_perc_title"/>

		<CheckBoxPreference
			android:key="scrobble_music_player"
			android:defaultValue="true"
			android:dependency="scrobble"
			android:summary="@string/prefs_scrobble_music_player_summary" android:title="@string/prefs_scrobble_music_player_title"/>

		<CheckBoxPreference
			android:key="scrobble_sls"
			android:defaultValue="true"
			android:dependency="scrobble"
			android:summary="@string/prefs_scrobble_sls_summary" android:title="@string/prefs_scrobble_sls_title"/>

		<CheckBoxPreference
			android:key="scrobble_sdroid"
			android:defaultValue="true"
			android:dependency="scrobble"
			android:summary="@string/prefs_scrobble_sdroid_summary" android:title="@string/prefs_scrobble_sdroid_title"/>

		<CheckBoxPreference
			android:key="scrobble_realtime"
			android:defaultValue="true"
			android:dependency="scrobble_music_player"
			android:summary="@string/prefs_scrobble_realtime_summary" android:title="@string/prefs_scrobble_realtime_title"/>

		<CheckBoxPreference
			android:key="scrobble_wifi_only"
			android:defaultValue="false"
			android:dependency="scrobble_music_player"
			android:summary="@string/prefs_scrobble_wifi_only_summary" android:title="@string/prefs_scrobble_wifi_only_title"/>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/prefs_cat_player_title">
		<CheckBoxPreference
			android:key="highquality"
			android:defaultValue="false"
			android:summary="@string/prefs_highquality_summary" android:title="@string/prefs_highquality_title"/>
		<CheckBoxPreference
			android:key="handle_noisy"
			android:defaultValue="true"
			android:summary="@string/prefs_noisy_summary" android:title="@string/prefs_noisy_title"/>
		<CheckBoxPreference
			android:key="headset_controls"
			android:defaultValue="true"
			android:summary="@string/prefs_headset_controls_summary" android:title="@string/prefs_headset_controls_title"/>
		<!--  <CheckBoxPreference
			android:key="discovery"
			android:defaultValue="false"
			android:summary="@string/prefs_discovery_summary" android:title="@string/prefs_discovery_title"/> -->
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/prefs_cat_sync_title">
		<CheckBoxPreference
			android:key="sync_icons"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_icons_summary" android:title="@string/prefs_sync_icons_title"/>
		<CheckBoxPreference
			android:key="sync_names"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_names_summary" android:title="@string/prefs_sync_names_title"/>
		<CheckBoxPreference
			android:key="sync_taste"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_taste_summary" android:title="@string/prefs_sync_taste_title"/>
		<CheckBoxPreference
			android:key="sync_website"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_website_summary" android:title="@string/prefs_sync_website_title"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/prefs_cat_about_title">
		<fm.last.android.activity.BugReport
			android:title="@string/prefs_bugreport_title"
			android:summary="@string/prefs_bugreport_summary"
			android:dialogLayout="@layout/bugreport"
			android:negativeButtonText="@string/common_cancel" android:positiveButtonText="@string/prefs_bugreport_send"/>
		<Preference
			android:title="@string/prefs_tos_title"
			android:key="tos"
			/>
		<Preference
			android:title="@string/prefs_privacy_title"
			android:key="privacy"
			/>
		<Preference
			android:title="@string/prefs_version_title"
			android:key="version"
			/>
	</PreferenceCategory>
</PreferenceScreen>
