<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/prefs_cat_sync_title">
		<CheckBoxPreference
			android:key="sync_icons"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_icons_summary" android:title="@string/prefs_sync_icons_title"/>
		<CheckBoxPreference
			android:key="sync_names"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_names_summary" android:title="@string/prefs_sync_names_title"/>
		<CheckBoxPreference
			android:key="sync_taste"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_taste_summary" android:title="@string/prefs_sync_taste_title"/>
		<CheckBoxPreference
			android:key="sync_website"
			android:defaultValue="true"
			android:summary="@string/prefs_sync_website_summary" android:title="@string/prefs_sync_website_title"/>
	</PreferenceCategory>

</PreferenceScreen>
