<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center"
		android:textColor="#fff" android:textSize="24sp"
		android:layout_margin="6dip" android:text="@string/sync_prompt_title"></TextView>
	<ImageView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:src="@android:drawable/divider_horizontal_dim_dark"></ImageView>
	<TextView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center"
		android:textColor="#fff"
		android:textSize="18sp" android:layout_margin="6dip" android:text="@string/sync_prompt_body"></TextView>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center"
		android:background="@android:drawable/bottom_bar" android:padding="2dip">
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:id="@+id/yes" android:text="@string/common_yes"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/common_no" android:id="@+id/no"></Button>
	</LinearLayout>
</LinearLayout>
